Fix enum alignment

--- a/adminer/static/default.css
+++ b/adminer/static/default.css
@@ -27,6 +27,7 @@ pre, textarea { font: 100%/1.25 monospace; }
 pre.jush { background: #fff; }
 input, textarea { box-sizing: border-box; }
 input, select { vertical-align: middle; }
+input[type="radio"] { vertical-align: text-bottom; }
 input.default { box-shadow: 1px 1px 1px #777; }
 input.required { box-shadow: 1px 1px 1px red; }
 input.maxlength { box-shadow: 1px 1px 1px red; }
